--- a/index.html.html
+++ b/index.html.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Chimichangas</title>
+    <link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
-<h1 style="background-color:purple;">CHIMICHANGAS</h1>
-<img src="https://e7.pngegg.com/pngimages/176/428/png-clipart-chimichanga-deadpool-fan-art-chimichanga-chibi-fictional-character.png" alt="chimichanga">
+<h1> CHIMICHANGAS</h1>
 
 <br>
-<h2 style="background-color:fuchsia;">HISTORIA</h2>
+<h2> HISTORIA </h2>
 <p>Según cuenta la historia, nacieron luego de que por error,
    a <br>una cocinera en un restaurante de Arizona se le cayera una tortilla rellena
     de guisado al sartén con manteca
@@ -27,7 +27,7 @@
     <br>Varían de acuerdo al gusto de las familias y también de lo que haya en casa.
 <br>Muchas personas también las acompañan con guacamole, esa deliciosa
 <br> salsa molcajeteada con aguacate, cebolla, cilantro y limón.
-<p>Las puedes encontrar en restaurantes como <a href="<iframe src="https://restaurante-hacienda-los-saucillos.business.site/ " target="_blank" >Hacienda Los Saucillos</a> </p>
+<p>Las puedes encontrar en restaurantes como <a href="<iframe src="https://restaurante-hacienda-los-saucillos.business.site/ " target="_blank" >Hacienda Los Saucillos </a> </p>
 <br> Es muy fácil prepararlas. ¿Se te antojaron? Aquí te dejamos
 <br>  una receta para triunfar cómo te mereces.
 
@@ -59,6 +59,6 @@
   <li>frijoles</li>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/JKK3D8vuTpE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-
+img src= "imagenes_lucia/deadpool.png" alt="chimichanga";
   </body>
 </html>
