--- a/curso.docs/index.html
+++ b/curso.docs/index.html
@@ -3,14 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Chimichangas</title>
+
+    <link rel="stylesheet" href="css/fontello.css">
     <link rel="stylesheet" href="css/estilo.css">
   </head>
   <body>
-<h1> CHIMICHANGAS</h1>
-<header>
+    <header>
+<h1 class="titulo"> CHIMICHANGAS</h1>
+  </header>
 
 
+  <nav>
+    <div class="">
+
+<a href="https://www.recetasgratis.net/receta-de-chimichanga-de-pollo-y-queso-59790.html"target="_blank">Chimichanga de pollo</a>
 <br>
+<a href="https://www.mylatinatable.com/chimichangas-de-puerco-en-chile-verde/"target="_blank">Chimichanga de cerdo</a>
+<br>
+    <a href="https://recetinas.com/chimichangas-de-ternera/"target="_blank">Chimichanga de ternera</a>
+    <br>
+    <a href="https://cookpad.com/ar/recetas/1871110-chimichangas-de-jamon-y-queso"target="_blank">Chimichanga de Jamon y Queso</a>
+
+
+  </div>
+<br>
+  </nav>
+  <div class="container">
+  <i class="icon-whatsapp"></i>
+  </div>
+
+
+<section>
 <h2 class="subtitulo"> HISTORIA </h2>
 <p class="parrafo">Según cuenta la historia, nacieron luego de que por error,
    a <br>una cocinera en un restaurante de Arizona se le cayera una tortilla rellena
@@ -24,8 +47,8 @@
       <br>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3710646.686724531!2d-109.67007535761324!3d24.737918694617182!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x869f539428a74959%3A0x9c7bdf760dbe5fef!2sSinaloa%2C%20M%C3%A9xico!5e0!3m2!1ses!2sar!4v1653188639035!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </p>
-  </header>
-  <nav>
+
+
 <p class="parrafo">
       <br> Esta es parte de su gastronomía típica y una receta que no puede
     <br>   faltar en ningún merendero de la región.</p>
@@ -41,9 +64,9 @@
 <br>
  una receta para triunfar cómo te mereces.
 </p>
-  </nav>
-  <section>
+</section>
 
+<aside>
     </p>
     <h2 class="subtitulo">Ingredientes</h1>
     <h2 class="subtitulo">Para la masa</h3>
@@ -53,11 +76,9 @@
 <li>1 cucharadita de sal
 <li>1/2 cucharadita de royal
 <li>1 taza de agua hirviendo </li>
-</section>
-<aside>
+
   <iframe width="560" height="315" src="https://www.youtube.com/embed/JKK3D8vuTpE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</aside>
-<section>
+
 
 <h2 class="subtitulo">Para el relleno de pollo</h3>
   <li>1 pechuga de pollo
@@ -75,12 +96,15 @@
   <li>queso
   <li>carne de res
   <li>frijoles</li>
-  </section>
 
+</aside>
 
 
 <footer>
+
+
   <h5> Información obtenida de varias paginas web</h5>
+
   </footer>
 
   </body>
